test(all): add comprehensive unit test suites for CRM, IAM, Billing, Messaging, and Financing